# autocar

./: .gitignore  frames_2026-03-02_22.52.18.gv
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: ekf.yaml  gazebo_bridge.yaml
my_robot_bringup/launch/: my_robot_gazebo.launch.xml  my_robot_launch.launch.py
my_robot_bringup/scripts/: get_robot_pose.py
my_robot_bringup/worlds/: room1.sdf  test_world.sdf
my_robot_description/rviz/: urdf_config.rviz
my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro  sensor.xacro
